# gr-rfid

./: CMakeLists.txt  README.md
apps/: reader_b210.py
examples/: rfid_test_offline.py
grc/: rfid_gate.block.yml  rfid_reader.block.yml  rfid_tag_decoder.block.yml
include/gnuradio/rfid/: CMakeLists.txt  gate.h  global_vars.h  reader.h  tag_decoder.h
lib/: CMakeLists.txt  gate_impl.h  global_vars.cc  reader_impl.cc  reader_impl.h  tag_decoder_impl.h
python/rfid/: CMakeLists.txt  __init__.py
python/rfid/bindings/: CMakeLists.txt  gate_python.cc  python_bindings.cc  reader_python.cc  tag_decoder_python.cc
python/rfid/bindings/docstrings/: README.md  gate_pydoc_template.h  reader_pydoc_template.h  tag_decoder_pydoc_template.h
